[package]
name = "egui-datepicker"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Adds date picker widget for egui gui library"
keywords = ["gui"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14"
chrono = "0.4"
num-traits = "0.2"

[[example]]
name = "simple"

